# pdf2xml

./: README.md  gan.xml  out.xml  pyproject.toml
examples/: minimal_config.yaml
src/pdf2xml/: cli.py  config.py  pipeline.py
src/pdf2xml.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pdf2xml/pdf_reader/: base.py  dummy_reader.py  pymupdf_reader.py
src/pdf2xml/utils/: log.py  text.py
src/pdf2xml/xml/: build.py  validate.py
tests/: test_step1_smoke.py  test_step2_reader.py
