[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf2xml"
version = "0.0.1"
description = "Convert academic PDFs into pragmatic JATS-like XML"
authors = [{name="Vishnu Vivek", email="vivekvaleti7053@gmail.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
optional-dependencies = { ocr = ["pytesseract"], tables = ["camelot-py", "pdfplumber", "tabula-py"], dev = ["pytest", "pytest-cov", "black", "ruff", "mypy"] }

[project.scripts]
pdf2xml = "pdf2xml.cli:main"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = ["py39"]
